--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-zfuncs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/index.js",
   "bin": {
@@ -16,6 +16,9 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint -v src --ext .ts",
     "lintfix": "npx eslint -fix src --ext .ts"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "keywords": [],
   "author": "",
